--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,11 @@ dependencies {
 
     def room_version = "2.1.0-alpha07"
     def coroutines_version = "1.2.1"
+    def retrofit_version = "2.5.0"
+    def moshi_version = "1.8.0"
     def arch_lifecycle_version = "2.1.0-alpha04"
     def androidx_arch_version = "2.0.0"
+
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -44,15 +47,33 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$arch_lifecycle_version"
     androidTestImplementation "androidx.arch.core:core-testing:$androidx_arch_version"
+
     // ParcherViewModel Kotlin support
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_lifecycle_version"
+
     // Coroutines
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    //Interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
